[gd_scene load_steps=8 format=3 uid="uid://ck8yrejxvhper"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_nwhy3"]
[ext_resource type="PackedScene" uid="uid://578mjdy0o5n6" path="res://Objects/TileGameMap.tscn" id="2_gl74d"]
[ext_resource type="PackedScene" uid="uid://2fl0ntnot72r" path="res://Objects/playerCamera.tscn" id="3_lwgnc"]
[ext_resource type="PackedScene" uid="uid://d01irkvscnjfy" path="res://Objects/ScoreBoard.tscn" id="4_quj51"]
[ext_resource type="PackedScene" uid="uid://cb7fgrjqh8bkw" path="res://GameScenes/Pause.tscn" id="5_hot31"]
[ext_resource type="Texture2D" uid="uid://b5ikdynr3vica" path="res://ArtAssets/arrow.png" id="5_o7hrm"]
[ext_resource type="PackedScene" uid="uid://bydvgtt4arge" path="res://GameScenes/EndRound.tscn" id="6_ia1sg"]

[node name="World" type="Node2D"]
script = ExtResource("1_nwhy3")

[node name="PlayerCamera2" parent="." instance=ExtResource("3_lwgnc")]
position = Vector2(-672, -384)
zoom = Vector2(1.4, 1.4)
position_smoothing_enabled = false

[node name="ScoreBoard" parent="PlayerCamera2" instance=ExtResource("4_quj51")]

[node name="wind" type="CanvasLayer" parent="PlayerCamera2"]

[node name="Arrow" type="Sprite2D" parent="PlayerCamera2/wind"]
position = Vector2(1760, 160)
texture = ExtResource("5_o7hrm")

[node name="WindText" type="Label" parent="PlayerCamera2/wind"]
offset_left = 1728.0
offset_top = 64.0
offset_right = 1752.0
offset_bottom = 87.0
scale = Vector2(2.70385, 2.70385)
text = "N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileGameMap" parent="." instance=ExtResource("2_gl74d")]
position = Vector2(-64, -32)

[node name="Pause" parent="." instance=ExtResource("5_hot31")]
visible = false

[node name="EndRound" parent="." instance=ExtResource("6_ia1sg")]
visible = false

[connection signal="allFireOut" from="TileGameMap" to="." method="_on_tile_game_map_all_fire_out"]
[connection signal="setScorce" from="TileGameMap" to="PlayerCamera2/ScoreBoard" method="_on_tile_game_map_set_scorce"]
